--- a/Knorr-news/Views/_ViewImports.cshtml
+++ b/Knorr-news/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Knorr_news
-@using Knorr_news.Models
+﻿@using KnorrNews
+@using KnorrNews.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
