--- a/Knorr-news/wwwroot/css/site.css
+++ b/Knorr-news/wwwroot/css/site.css
@@ -20,3 +20,34 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.card-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+
+.card {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-body {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-footer {
+    margin-top: auto;
+}
+
+.card:hover {
+    transform: scale(1.03);
+}
+
+a.disabled {
+    pointer-events: none;
+    cursor: default;
+}
